--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,12 +26,14 @@ jobs:
       - name: Parse Version
         id: parse_version
         run: |
-          VERSION=$(echo "${{ github.event.comment.body }}" | awk '{print $2}')
-          if [ -z "$VERSION" ]; then
+          RAW_VERSION=$(echo "${{ github.event.comment.body }}" | awk '{print $2}')
+          if [ -z "$RAW_VERSION" ]; then
             echo "VERSION_MISSING=true" >> $GITHUB_ENV
             exit 1
           fi
-          echo "VERSION=$VERSION" >> $GITHUB_ENV
+          STRIPPED_VERSION=$(echo $RAW_VERSION | sed 's/^v//')
+          echo "RAW_VERSION=$RAW_VERSION" >> $GITHUB_ENV
+          echo "STRIPPED_VERSION=$STRIPPED_VERSION" >> $GITHUB_ENV
 
       - name: Git Config Setup
         run: |
@@ -42,59 +44,58 @@ jobs:
         env:
           GH_TOKEN: ${{ github.token }}
         run: |
-          VERSION=${{ env.VERSION }}
-          RELEASE_BRANCH="release/$VERSION"
+          RAW_VER=${{ env.RAW_VERSION }}
+          STRIP_VER=${{ env.STRIPPED_VERSION }}
+          RELEASE_BRANCH="release/$RAW_VER"
+          XCODE_PROJ_PATH="QueenCam/QueenCam.xcodeproj/project.pbxproj"
 
           # 1. develop에서 시작하여 릴리즈 브랜치 생성
           git checkout develop
           git checkout -b $RELEASE_BRANCH
 
-          # 2. 빌드 넘버 증가 (+1)
-          OLD_BUILD_NUMBER=$(grep -m 1 "CURRENT_PROJECT_VERSION =" QueenCam/QueenCam.xcodeproj/project.pbxproj | sed -E 's/.*=[[:space:]]*([0-9]+);/\1/')
+          # 2. Marketing Version 및 Build Number 업데이트
+          sed -i "s/MARKETING_VERSION = .*/MARKETING_VERSION = $STRIP_VER;/g" $XCODE_PROJ_PATH
+          
+          OLD_BUILD_NUMBER=$(grep -m 1 "CURRENT_PROJECT_VERSION =" $XCODE_PROJ_PATH | sed -E 's/.*=[[:space:]]*([0-9]+);/\1/')
           NEW_BUILD_NUMBER=$((OLD_BUILD_NUMBER + 1))
-          sed -i "s/CURRENT_PROJECT_VERSION = .*/CURRENT_PROJECT_VERSION = $NEW_BUILD_NUMBER;/g" QueenCam/QueenCam.xcodeproj/project.pbxproj
+          sed -i "s/CURRENT_PROJECT_VERSION = .*/CURRENT_PROJECT_VERSION = $NEW_BUILD_NUMBER;/g" $XCODE_PROJ_PATH
           
           git add .
-          git commit -m "[Chore] release: 빌드 넘버 증가 ($NEW_BUILD_NUMBER)"
+          git commit -m "[Chore] release: v$STRIP_VER 빌드 넘버 증가 ($NEW_BUILD_NUMBER)"
 
           # 3. CHANGELOG.md 업데이트
           TODAY=$(date +'%Y-%m-%d')
-          sed -i "s/## \[Unreleased\]/## [$VERSION] - $TODAY/g" CHANGELOG.md
-          
+          sed -i "s/## \[Unreleased\]/## [$RAW_VER] - $TODAY/g" CHANGELOG.md
           git add CHANGELOG.md
-          git commit -m "[Docs] release: $VERSION CHANGELOG.md"
+          git commit -m "[Docs] release: $RAW_VER CHANGELOG.md"
 
-          # --- 직접 병합 시작 ---
+          # 4. 🔥 릴리즈 브랜치를 리모트에 푸시
+          git push origin $RELEASE_BRANCH
 
-          # 4. main 브랜치에 병합 및 태그 생성
+          # --- 직접 병합 및 태깅 ---
+
+          # 5. main 브랜치에 병합 및 태그 생성
           git checkout main
           git merge --no-ff $RELEASE_BRANCH -m "Merge release branch $RELEASE_BRANCH into main"
-          git tag -a "$VERSION" -m "Release $VERSION"
+          git tag -a "$RAW_VER" -m "Release $RAW_VER"
 
-          # 5. develop 브랜치에 백머지 (빌드 넘버/로그 반영)
+          # 6. develop 브랜치에 백머지
           git checkout develop
           git merge --no-ff $RELEASE_BRANCH -m "Merge release branch $RELEASE_BRANCH back to develop"
 
-          # 6. 모든 변경사항 한 번에 푸시
-          # main, develop 브랜치와 생성된 태그를 모두 푸시합니다.
+          # 7. main, develop 브랜치와 태그 푸시
           git push origin main develop --tags
+
+          # 8. 로컬 작업용 브랜치 삭제
+          git branch -d $RELEASE_BRANCH
 
       - name: Post Success Comment
         if: success()
         env:
           GH_TOKEN: ${{ github.token }}
         run: |
-          gh issue comment ${{ github.event.issue.number }} --body "🚀 **배포 준비 작업이 완료되었습니다!**
+          gh issue comment ${{ github.event.issue.number }} --body "🚀 **배포 자동화 작업이 성공적으로 완료되었습니다!**
           
-          - **버전:** \`${{ env.VERSION }}\`
-          - **태그 생성:** \`${{ env.VERSION }}\` 태그가 푸시되었습니다.
-          
-          이제 Xcode에서 해당 태그 혹은 main 브랜치를 기준으로 아카이빙 및 배포를 진행해 주세요."
-
-      - name: Post Failure Comment
-        if: failure()
-        env:
-          GH_TOKEN: ${{ github.token }}
-        run: |
-          MSG="❌ 작업 중 오류가 발생했습니다. 브랜치 충돌이나 권한 설정을 확인해 주세요."
-          gh issue comment ${{ github.event.issue.number }} --body "$MSG"
+          - **브랜치 푸시:** \`release/${{ env.RAW_VERSION }}\` 가 원격에 생성되었습니다.
+          - **병합 완료:** \`main\` 및 \`develop\`에 반영되었습니다.
+          - **태그 생성:** \`${{ env.RAW_VERSION }}\` 태그가 푸시되었습니다.
