--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -54,73 +54,55 @@ jobs:
         env:
           GH_TOKEN: ${{ github.token }}
         run: |
-          RAW_VER=${{ env.RAW_VERSION }}
-          STRIP_VER=${{ env.STRIPPED_VERSION }}
+          RAW_VER=${{ env.RAW_VERSION }}      # 예: v1.3.0
+          STRIP_VER=${{ env.STRIPPED_VERSION }} # 예: 1.3.0
           RELEASE_BRANCH="release/$RAW_VER"
           XCODE_PROJ_PATH="QueenCam/QueenCam.xcodeproj/project.pbxproj"
+          TODAY=$(date +'%Y-%m-%d')
+          REPO_URL="https://github.com/${{ github.repository }}"
+
+          # 1. 이전 버전 추출 (아직 수정 전인 CHANGELOG에서 ## [x.y.z] 첫 번째 항목)
+          # 태그 비교를 위해 'v'를 붙여 관리합니다.
+          LAST_VERSION_STRIP=$(grep -oE '^## \[[0-9]+\.[0-9]+\.[0-9]+\]' CHANGELOG.md | head -n 1 | grep -oE '[0-9]+\.[0-9]+\.[0-9]+')
+          LAST_VERSION_TAG="v$LAST_VERSION_STRIP"
 
           git checkout develop
           git checkout -b $RELEASE_BRANCH
 
-          # Marketing Version 및 Build Number 업데이트
+          # 2. Xcode Version & Build 업데이트
           sed -i "s/MARKETING_VERSION = .*/MARKETING_VERSION = $STRIP_VER;/g" $XCODE_PROJ_PATH
-          
           OLD_BUILD_NUMBER=$(grep -m 1 "CURRENT_PROJECT_VERSION =" $XCODE_PROJ_PATH | sed -E 's/.*=[[:space:]]*([0-9]+);/\1/')
           NEW_BUILD_NUMBER=$((OLD_BUILD_NUMBER + 1))
           sed -i "s/CURRENT_PROJECT_VERSION = .*/CURRENT_PROJECT_VERSION = $NEW_BUILD_NUMBER;/g" $XCODE_PROJ_PATH
           
           git add .
-          git commit -m "[Chore] release: v$STRIP_VER 빌드 넘버 증가 ($NEW_BUILD_NUMBER)"
+          git commit -m "[Chore] release: $RAW_VER 빌드 넘버 증가 ($NEW_BUILD_NUMBER)"
 
-          # =========================
-          # CHANGELOG.md 업데이트
-          # =========================
-          TODAY=$(date +'%Y-%m-%d')
+          # 3. CHANGELOG 업데이트 시작
+          # 3-1. 기존 [Unreleased] 섹션 헤더를 현재 버전과 날짜로 변경
+          sed -i "s/## \[Unreleased\]/## [$STRIP_VER] - $TODAY/" CHANGELOG.md
 
-          # 1. 기존 [Unreleased] → 현재 버전 + 날짜
-          sed -i "s/## \\[Unreleased\\]/## [$STRIP_VER] - $TODAY/g" CHANGELOG.md
+          # 3-2. 서문(기준으로 수행한다.) 바로 아래에 새로운 [Unreleased] 템플릿 삽입
+          # '수행한다.' 문구가 있는 라인 뒤(a)에 내용을 추가합니다.
+          UNRELEASE_TEMPLATE="\n## [Unreleased]\n\n### Added\n\n### Changed\n\n### Deprecated\n\n### Removed\n\n### Fixed\n\n### Security"
+          sed -i "/기준으로 수행한다\./a $UNRELEASE_TEMPLATE" CHANGELOG.md
 
-          # 2. 서문 아래에 새로운 [Unreleased] 섹션 삽입
-          awk '
-          BEGIN {
-            unreleased = "## [Unreleased]\n\n### Added\n\n### Changed\n\n### Deprecated\n\n### Removed\n\n### Fixed\n\n### Security\n"
-          }
-          {
-            print
-            if ($0 ~ /^이 프로젝트의 버저닝은/ && !inserted) {
-              print ""
-              print unreleased
-              inserted = 1
-            }
-          }
-          ' CHANGELOG.md > CHANGELOG.tmp && mv CHANGELOG.tmp CHANGELOG.md
-
-          # 3. 이전 버전 계산 (Unreleased, 현재 버전 제외)
-          LAST_VERSION=$(grep -oE '^## \\[[^]]+\\]' CHANGELOG.md | sed -n '3p' | tr -d '[]')
-
-          # 4. diff 링크를 최신 버전 위에 삽입
-          awk -v raw="$STRIP_VER" -v last="$LAST_VERSION" -v repo="${{ github.repository }}" '
-          BEGIN {
-            newLink = "[" raw "]: https://github.com/" repo "/compare/" last ".../" raw
-          }
-          {
-            if (!inserted && $0 ~ /^\[[^]]+\]: https:\/\/github.com\//) {
-              print newLink
-              inserted = 1
-            }
-            print
-          }
-          END {
-            if (!inserted) {
-              print newLink
-            }
-          }
-          ' CHANGELOG.md > CHANGELOG.tmp && mv CHANGELOG.tmp CHANGELOG.md
+          # 3-3. 하단 링크 섹션 업데이트
+          # [Unreleased] 비교 링크는 '현재버전...HEAD'로 갱신 (맨 아래에 있는 경우 대응)
+          sed -i "s|^\[Unreleased\]:.*|[Unreleased]: $REPO_URL/compare/$RAW_VER...HEAD|" CHANGELOG.md
+          
+          # 이번 릴리즈에 대한 diff 링크 생성
+          NEW_DIFF_LINK="[$STRIP_VER]: $REPO_URL/compare/$LAST_VERSION_TAG...$RAW_VER"
+          
+          # 파일에서 처음으로 '['로 시작하는 링크가 등장하는 줄 바로 위에 새 링크 삽입
+          # 0,/pattern/ 은 파일의 첫 번째 매칭 지점까지만 범위를 제한합니다.
+          sed -i "0,/^\[.*\]:/{s/^\[.*\]:/$NEW_DIFF_LINK\n&/}" CHANGELOG.md
 
           git add CHANGELOG.md
           git commit -m "[Docs] release: $RAW_VER CHANGELOG.md"
 
           # 릴리즈 브랜치 푸시
+          # 4. 브랜치 병합 및 푸시
           git push origin $RELEASE_BRANCH
 
           # main 병합 및 태깅
