--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -88,15 +88,14 @@ jobs:
           sed -i "/기준으로 수행한다\./a $UNRELEASE_TEMPLATE" CHANGELOG.md
 
           # 3-3. 하단 링크 섹션 업데이트
-          # [Unreleased] 비교 링크는 '현재버전...HEAD'로 갱신 (맨 아래에 있는 경우 대응)
+          # [Unreleased] 비교 링크는 '현재버전...HEAD'로 갱신
           sed -i "s|^\[Unreleased\]:.*|[Unreleased]: $REPO_URL/compare/$RAW_VER...HEAD|" CHANGELOG.md
-          
+        
           # 이번 릴리즈에 대한 diff 링크 생성
           NEW_DIFF_LINK="[$STRIP_VER]: $REPO_URL/compare/$LAST_VERSION_TAG...$RAW_VER"
-          
-          # 파일에서 처음으로 '['로 시작하는 링크가 등장하는 줄 바로 위에 새 링크 삽입
-          # 0,/pattern/ 은 파일의 첫 번째 매칭 지점까지만 범위를 제한합니다.
-          sed -i "0,/^\[.*\]:/{s/^\[.*\]:/$NEW_DIFF_LINK\n&/}" CHANGELOG.md
+        
+          # 구분자를 | 로 변경하여 URL 내부의 / 와 충돌 방지
+          sed -i "0,/^\[.*\]:/{s|^\[.*\]:|$NEW_DIFF_LINK\n&|}" CHANGELOG.md
 
           git add CHANGELOG.md
           git commit -m "[Docs] release: $RAW_VER CHANGELOG.md"
